--- a/error-service/src/main/resources/templates/fallback.html
+++ b/error-service/src/main/resources/templates/fallback.html
@@ -117,7 +117,7 @@
 	<script>
 		document.querySelector(".fix1 .actions").addEventListener("click",
 				function(e) {
-					location.replace("http://localhost:8000/menu/list");
+					location.replace("http://localhost:8000/main/menu");
 				});
 	</script>
 </body>
