--- a/main-service/src/main/resources/templates/Fragment/header2.html
+++ b/main-service/src/main/resources/templates/Fragment/header2.html
@@ -25,10 +25,10 @@
 		<div style="border-bottom: solid #005B9F 2px;">
 			<!-- 헤더 -->
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="http://localhost:8000/main/menu"><img
+            <a href="http://localhost:8000/main/"><img
                src="img/logo.png"></a>
             <div class="container-fluid" style="height: 60px;">
-               <a class="navbar-brand" href="http://localhost:8000/main/menu"
+               <a class="navbar-brand" href="http://localhost:8000/main/"
                   style="color: black; font-size: 30px; font-weight: bold;">Dream
                   Security</a>
 					<button class="navbar-toggler" type="button"
