--- a/main-service/src/main/resources/templates/main.html
+++ b/main-service/src/main/resources/templates/main.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<html th:replace="Fragment/header::headerFragment"></html>
-	<html th:replace="Fragment/imageList::imageListFragment"></html>
+	<html th:replace="Fragment/Calculater::CalFragment"></html>
 	<html th:replace="Fragment/content::contentFragment"></html>
 	<html th:replace="Fragment/footer::footerFragment"></html>
 </body>
