[박현민] approve 수정 manage 확인 product 수정

--- a/product-service/src/main/resources/static/css/product-service-list.css
+++ b/product-service/src/main/resources/static/css/product-service-list.css
@@ -45,3 +45,18 @@ main.card-size{
 .table-size::-webkit-scrollbar {
     display: none; 
 }
+
+table thead tr th{
+	text-align: center;
+	vertical-align : middle;
+}
+
+table thead tr td{
+	text-align: center;
+	vertical-align : middle;
+}
+
+.text-cent{
+	text-align: center;
+	vertical-align : middle;
+}
