--- a/approve-service/src/main/resources/templates/detail.html
+++ b/approve-service/src/main/resources/templates/detail.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+	<html th:replace="header::headerFragment"></html>
     <div class="wrapper rounded bg-white">
         <div class="h3">대출 심사 <span class="desc"
 						th:text="${list.preferred_username} + '님 심사 부탁드립니다.'"></span></div>
@@ -67,6 +68,7 @@
                         <!-- <div class="btn btn-primary mt-3">등록하기</div> -->
         </div>
     </div>
+    <html th:replace="footer::footerFragment"></html>
     <script th:inline="javascript">
 		function approval() {
 			if(confirm("승인하시겠습니까?")){
