--- a/product-service/src/main/resources/static/css/button.css
+++ b/product-service/src/main/resources/static/css/button.css
@@ -18,7 +18,6 @@
 .fill-1:focus {
   box-shadow: inset 0 0 0 2em var(--hover);
 }
-
 .fill-2:hover,
 .fill-2:focus {
   box-shadow: inset 0 0 0 2em var(--hover);
@@ -69,11 +68,18 @@
 .fill-1 {
     --color: #005B9F;;
     --hover: #005B9F;;
+      margin:auto; 
+  	  display:block;
   }
-.fill-2 {
-     --color: #8fc866;
-  	 --hover: #66c887;
+  .fill-2 {
+  --color: #19bc8b;
+  --hover: #19bc8b;
+    margin:auto; 
+    display:block;
+    width : 100px;
+
   }
+
 .pulse {
   --color: #ef6eae;
   --hover: #ef8f6e;
