--- a/product-service/src/main/resources/templates/product-service-list.html
+++ b/product-service/src/main/resources/templates/product-service-list.html
@@ -4,18 +4,9 @@
 <title>대출 상품 목록</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link
-	href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-	rel="stylesheet">
-<link
-	href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.css"
-	rel="stylesheet">
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 	<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/product-service-list.css">
     <link rel="stylesheet" href="css/button.css">
@@ -56,14 +47,14 @@
                             <!--Table head-->
                             <thead >
                                 <tr>
-                                    <th>상품 번호</th>
-                                    <th>상품명</th>
-                                    <th>대출 한도(만원)</th>
-                                    <th>이자율(%)</th>
-                                    <th>대출 최대기간(개월)</th>
-                                    <th style="width:20%">신청 자격</th>
+                                    <th class="text-cent">#</th>
+                                    <th class="text-cent">상품명</th>
+                                    <th style="width:20%">자격</th>
+                                    <th class="text-cent">한도</th>
+                                    <th class="text-cent">금리</th>
+                                    <th class="text-cent">기간</th>
                                     <th style="width:20%">상품 설명</th>
-                                    <th colspan="2"><button class="fill-2" style="padding: 4%;" onclick="move()" >상품 등록</button></th>
+                                    <th style="width:20%" colspan="2"><button class="fill-2" style='padding: 4%;' onclick='move()'>상품 등록</button></th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -73,10 +64,10 @@
                                 <tr th:each="product : ${dream}">
                                     <th scope="row" th:text="${product.proNo}"></th>
                                     <td th:text="${product.proName}">Mark</td>
+                                    <td th:text="${product.need}"></td>
                                     <td th:text="${#numbers.formatInteger(product.proLimit, 3, 'COMMA')} + '만원'"></td>
                                     <td th:text="${product.rate}">%</td>
                                     <td th:text="${product.term} + '개월'"></td>
-                                    <td th:text="${product.need}"></td>
                                     <td th:text="${product.detail}"></td>
                                     <td>
                                     <form method="get" action="/product/modify"> 
