--- a/main-service/src/main/resources/static/css/headerfooter.css
+++ b/main-service/src/main/resources/static/css/headerfooter.css
@@ -1,17 +1,11 @@
-@font-face {
-    font-family: 'CookieRun-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/CookieRun-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
 body *{
-    font-family: 'CookieRun-Regular';
+    font-family:'Malgun Gothic';
 }
 
 header{
     width: 100%;
     position: relative;
+    font-weight:bold;
 }
 /* 푸터 */
 footer {
