--- a/order-service/src/main/resources/templates/Fragment/order.html
+++ b/order-service/src/main/resources/templates/Fragment/order.html
@@ -40,13 +40,13 @@
 								<fieldset>
 									<div class="form-card">
 										<h2 class="fs-title">상품명</h2>
-										<p>드림대출</p>
+										<p th:text="${productList.proName}"></p>
 										<hr>
 										<h2 class="fs-title">대출 상품 설명</h2>
-										<p>비트교육센터를 다니면서 생활비가 부족한 당신에게 필요한 드림대출! 당신의 꿈을 이루어드립니다</p>
+										<p th:text="${productList.detail}"></p>
 										<hr>
 										<h2 class="fs-title">신청자격</h2>
-										<p>비트교육센터를 다니고 있다면 신청 할 수 있습니다</p>
+										<p th:text="${productList.need}"></p>
 										<hr>
 									</div>
 									<input type="button" name="next" class="next action-button"
@@ -82,52 +82,53 @@
 											<div class="col-6">
 												<select class="list-dt" id="month" name="expmonth">
 													<option selected>대출용도</option>
-													<option>가계자금</option>
-													<option>사업자금</option>
-													<option>주택자금</option>
-													<option>경조자금</option>
-													<option>생활자금</option>
+													<option value="1">가계자금</option>
+													<option value="2">사업자금</option>
+													<option value="3">주택자금</option>
+													<option value="4">경조자금</option>
+													<option value="5">생활자금</option>
 												</select>
 											</div>
 										</div>
 										<div class="row">
 											<div class="col-4">
-												<label class="pay">이자율</label> <input type="text"
-													name="holdername" value="2.0%" readonly />
+												<label class="pay">이자율</label> <input type="text" class="rate"
+													name="holdername" th:value="${productList.rate} + '%'" readonly />
 											</div>
 										</div>
 										<div class="row">
 											<div class="col-4">
-												<label class="proLimit">대출한도</label> <input type="number"
-													name="proLimit" value="10000" readonly />
-												<p>만원</p>
+												<label class="proLimit">대출한도</label> <input type="text"
+													name="proLimit" class = "proLimit" th:value="${#numbers.formatInteger(productList.proLimit,3,'COMMA')}+'만원'" readonly />
+												<p></p>
 											</div>
 
 											<div class="col-6">
 												<label class="orderPrice">희망금액</label> <input type="text"
-													id="orderPrice"
+													id="orderPrice" class="orderPrice"
 													oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
 													name="orderPrice" placeholder="희망금액을 입력하세요" />
 											</div>
 
 											<div class="col-4">
 												<label class="term">대출 최대 기간</label> <input type="text"
-													name="term" placeholder="24개월" readonly />
+													name="term" th:value="${productList.term} +'개월'" readonly />
 											</div>
 
 											<div class="col-6">
 												<label class="period">희망기간</label> <input type="text"
-													id="period"
+													id="period" class="period"
 													oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
 													name="period" placeholder="희망 기간을 입력하세요" />
 											</div>
+											<input type="hidden" th:value="${productList.proNo}">
 										</div>
 
 									</div>
 									<input type="button" name="previous"
 										class="previous action-button-previous" value="Previous" /> <input
 										type="button" name="make_payment" class="next action-button"
-										value="Confirm" onclick="apply()" />
+										value="Confirm" onclick="saveOrder()" />
 								</fieldset>
 								<fieldset>
 									<div class="form-card">
@@ -185,6 +186,11 @@
 				alert("대출기간을 초과했습니다. 다시 입력해 주세요.");
 			}
 		})
+		
+		function saveOrder(){
+			var p = $('.rate').val();
+			console.log(Double.parseDouble(p));
+		}
 	</script>
 </body>
 
