[박준호] 04-08 15:56 order-service DB 장착 완료 / kafka producer 작업 전

--- a/main-service/src/main/resources/templates/Fragment/footer.html
+++ b/main-service/src/main/resources/templates/Fragment/footer.html
@@ -13,7 +13,7 @@
 	<!-- 푸터 -->
 	<footer id="sticky-footer"
 		class="footer flex-shrink-0 py-4 text-white-50"
-		style="background-color: #005B9F; margin-top : -8%;">
+		style="background-color: #005B9F;">
 		<div class="container text-center">
 			<p class="text-light" style="margin-top: 1%; font-size: 25px;">@2022
 				드림시큐리티 & 비트교육센터 Final Project!</p>
