[박준호] 16:21 04-08 이유없는 푸시 (풀받기 전)

--- a/order-service/src/main/resources/templates/Fragment/order.html
+++ b/order-service/src/main/resources/templates/Fragment/order.html
@@ -110,12 +110,9 @@
 											</div>
 
 											<div class="col-6">
-												<label class="orderPrice">희망금액</label> <input type="text"
-													id="orderPrice" onkeyup="inputNumberFormat(this)"
+												<input type="text" id="orderPrice" onkeyup="inputNumberFormat(this)"
 													oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
 													name="orderPrice" placeholder="희망금액을 입력하세요" />
-												<div id="overMoney"
-													style="margin-top: -6%; margin-left: 3%;"></div>
 											</div>
 
 											<div class="col-4">
