--- a/confirm-service/src/main/resources/templates/confrim-service-check.html
+++ b/confirm-service/src/main/resources/templates/confrim-service-check.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>approve-service/detail</title>
-<link rel="stylesheet" href="css/approve-service-detail.css">
+<title>confirm-service/check</title>
+<link rel="stylesheet" href="css/confirm-service-check.css">
 <link rel="stylesheet" href="css/button.css">
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
@@ -24,17 +24,17 @@
 		<div class="row">
 			<div class="col-md-6 mt-md-0 mt-3">
 				<label>상품명</label> <input class="form-control"
-					th:value="${orderVO.proName}" required readonly>
+					th:value="${last.proName}" required readonly>
 			</div>
 			<div class="col-md-6 mt-md-0 mt-3">
 				<label>고객명</label> <input class="form-control"
-					th:value="${orderVO.userId}" required readonly>
+					th:value="${last.userId}" required readonly>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6 mt-md-0 mt-3">
 				<label>대출 금액</label> <input type="readonly" class="form-control"
-					th:value="${#numbers.formatInteger(orderVO.orderPrice,3,'COMMA')}+'만원'"
+					th:value="${#numbers.formatInteger(last.orderPrice,3,'COMMA')}+'만원'"
 					required readonly>
 			</div>
 			<div class="col-md-6 mt-md-0 mt-3">
@@ -45,7 +45,7 @@
 		<div class="row">
 			<div class="col-md-6 mt-md-0 mt-3">
 				<label>신청날짜</label> <input class="form-control"
-					th:value="${orderVO.orderDate}" required readonly>
+					th:value="${last.orderDate}" required readonly>
 			</div>
 			<div class="col-md-6 mt-md-0 mt-3">
 				<label>이자</label> <input class="form-control" value="2.0%" required
@@ -55,7 +55,7 @@
 		<div class="row">
 			<div class="col-md-6 mt-md-0 mt-3">
 				<label>만기날짜</label> <input class="form-control"
-					th:value="${orderVO.endDate}" required readonly>
+					th:value="${last.endDate}" required readonly>
 			</div>
 			<!-- <div class="col-md-6 mt-md-0 mt-3">
 				<label>월 납부액</label> <input class="form-control"
@@ -71,7 +71,7 @@
 			<div class="col-md-6">
 				<form method="POST">
 					<input type="hidden" id="orderNo" name="orderNo"
-						th:value="${orderVO.orderNo}">
+						th:value="${last.orderNo}">
 						
 					<button type="button" class="btn-style06 md"
 						style="margin-left: 15%;" onclick="approval()">승인</button>
