[박현민] 04-11 09:39 view 관련 overflow:auto scroll:display:none 처리

--- a/confirm-service/src/main/resources/static/css/confirm-service-list.css
+++ b/confirm-service/src/main/resources/static/css/confirm-service-list.css
@@ -123,3 +123,12 @@ p {
 .btn-style07:hover, .btn-style06:focus {
     background: #666;
 }
+
+.mb-4{
+	height: 700px;
+	overflow: scroll;
+}
+
+.mb-4::-webkit-scrollbar {
+  display: none;
+}
