--- a/product-service/src/main/resources/templates/product-service-list.html
+++ b/product-service/src/main/resources/templates/product-service-list.html
@@ -26,7 +26,7 @@
 		<html th:replace="header::headerFragment"></html>
 		<!--MDB Tables-->
 		<div class="container mt-4">
-			<div class="card mb-4">
+			<div class="card mb-4 pageover">
 				<div class="card-body">
 					<!-- Grid row -->
 					<div class="row">
