--- a/confirm-service/src/main/resources/templates/confirm-service-list.html
+++ b/confirm-service/src/main/resources/templates/confirm-service-list.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>manage-service/list</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/manage-service-list.css">
+<link rel="stylesheet" href="css/confirm-service-list.css">
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
@@ -31,7 +31,7 @@
 		<html th:replace="header::headerFragment"></html>
 		<!--MDB Tables-->
 		<div class="container mt-4">
-			<div class="card mb-4">
+			<div class="card mb-4 pageover">
 				<div class="card-body">
 					<!-- Grid row -->
 					<div class="row">
