--- a/main-service/src/main/resources/templates/Fragment/header.html
+++ b/main-service/src/main/resources/templates/Fragment/header.html
@@ -7,7 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
 <link rel="stylesheet" href="css/boot_min.css" />
-<link rel="stylesheet" href="css/menu.css" />
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	crossorigin="anonymous"></script>
@@ -22,14 +21,14 @@
 </head>
 
 <body>
+<a th:text="${_csrf.token}">test </a>
 	<header>
 		<div style="border-bottom: solid #005B9F 2px;">
 			<!-- 헤더 -->
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a href="http://localhost:8000/main/menu"><img
-					src="img/logo.png"></a>
+				<img src="img/logo.png">
 				<div class="container-fluid" style="height: 60px;">
-					<a class="navbar-brand" href="http://localhost:8000/main/menu"
+					<a class="navbar-brand" href="#"
 						style="color: black; font-size: 30px; font-weight: bold;">Dream
 						Security</a>
 					<button class="navbar-toggler" type="button"
@@ -77,22 +76,17 @@
 							</a>
 						</ul>
 						<!-- 주석 끝... -->
-						<p class="text-dark" style="margin-top: 1%;"
-							th:text="${list.preferred_username}+'님 환영합니다.&nbsp;'"></p>
-						<button class="btn btn-outline-dark my-2 my-sm-0" type="button"
-							style="margin-right: 1%; font-weight: bold;" onclick="logout()">로그아웃</button>
+						<form action="/logout" method="POST">
+							<p class="text-dark" style="margin-top: 1%;"
+								th:text="${list.preferred_username}+'님 환영합니다.&nbsp;'"></p>
+							<button class="btn btn-outline-dark my-2 my-sm-0" type="submit"
+								style="margin-right: 1%">로그아웃</button>        
+						</form>
 					</div>
 				</div>
 			</nav>
 		</div>
 	</header>
-	<script>
-		//로그아웃 버튼
-		function logout() {
-			location.href = "http://localhost:8000/logout";
-		}
-	</script>
-	<!-- 헤더 끝 -->
 </body>
 
 </html>
