--- a/confirm-service/src/main/resources/static/css/confirm-service-check.css
+++ b/confirm-service/src/main/resources/static/css/confirm-service-check.css
@@ -25,7 +25,8 @@ body::-webkit-scrollbar {
 
 .wrapper label {
     display: block;
-    padding-bottom: 0.2rem
+    padding-bottom: 0.2rem;
+    color: black;
 }
 
 .wrapper .form .row {
@@ -33,7 +34,8 @@ body::-webkit-scrollbar {
 }
 
 .wrapper .form .row .form-control {
-    box-shadow: none
+    box-shadow: none;
+    color: black;
 }
 
 .wrapper .form .option {
