--- a/confirm-service/src/main/resources/templates/confirm-service-check.html
+++ b/confirm-service/src/main/resources/templates/confirm-service-check.html
@@ -10,53 +10,49 @@
     <link rel="stylesheet" href="css/confirm-service-check.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
-
 </head>
 
 <body>
+<html th:replace="header::headerFragment"></html>
     <div class="wrapper rounded bg-white">
-        <div class="h3">주문 내역 확인</div>
+       <div class="h3"
+		style="font-size: 35px; font-weight: 600; margin-bottom: 25px; text-align: center;">내 주문내역</div>
+	<hr>
         <div class="form">
             <div class="row">
                 <div class="col-md-6 mt-md-0 mt-3"> <label>상품명</label>
-                    <input class="form-control" value="test" required readonly>
+                    <input class="form-control" th:value="${User.proName}" required readonly>
                 </div>
                 <div class="col-md-6 mt-md-0 mt-3"> <label>고객 이름</label>
-                    <input class="form-control" value="선우비트" required readonly>
+                    <input class="form-control" th:value="${User.userId}" required readonly>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 mt-md-0 mt-3"> <label>대출 금액</label>
-                    <input type="readonly" class="form-control" value="10,000,000 원" required readonly>
+                    <input type="readonly" class="form-control" th:value="${#numbers.formatInteger(User.orderPrice,3,'COMMA')}+' 만원'" required readonly>
                 </div>
                 <div class="col-md-6 mt-md-0 mt-3"> <label>대출 용도</label>
-                    <input class="form-control" value="주택 자금 마련" required readonly>
+                    <input class="form-control" th:value="${User.purpose}" required readonly>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 mt-md-0 mt-3"> <label>신청날짜</label>
-                    <input class="form-control" value="2022-04-04" required readonly>
+                    <input class="form-control" th:value="${#dates.format(User.orderDate, 'yyyy-MM-dd')}" required readonly>
                 </div>
                 <div class="col-md-6 mt-md-0 mt-3"> <label>이자</label>
-                    <input class="form-control" value="2.0%" required readonly>
+                    <input class="form-control" th:value="${User.rate} + ' %'" required readonly>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 mt-md-0 mt-3"> <label>만기날짜</label>
-                    <input class="form-control" value="2022-04-05" required readonly>
+                    <input class="form-control" th:value="${#dates.format(User.endDate, 'yyyy-MM-dd')}" required readonly>
                 </div>
                 <div class="col-md-6 mt-md-0 mt-3"> <label>월 납부액</label>
-                    <input class="form-control" value="드림대출" required readonly>
-                </div>
-            </div>
-            <div class="row">
-                <div style="float: right; padding: 20px;">
-                    <button class="fill"> 확인(main으로 이동)</button>
-                    <!-- <button class="close" >거절</button> -->
+                    <input class="form-control" th:value="${#numbers.formatInteger(User.amount,3,'COMMA')}+' 원'" required readonly>
                 </div>
             </div>
         </div>
     </div>
+    <html th:replace="footer::footerFragment"></html>
 </body>
-
 </html>
