--- a/main-service/src/main/resources/templates/Fragment/header2.html
+++ b/main-service/src/main/resources/templates/Fragment/header2.html
@@ -48,6 +48,9 @@
 								<div class="dropdown-menu">
 									<a class="dropdown-item"
 										href="http://localhost:8000/actuator/health/circuitBreakers">CircuitBreaker</a>
+									<div class="dropdown-divider"></div>
+									<a class="dropdown-item"
+										href="http://localhost:8761">Eureka</a>
 								</div></li>
 						</ul>
 						<button class="btn btn-outline-dark my-2 my-sm-0" type="button"
