--- a/approve-service/src/main/resources/templates/approve-service-detail.html
+++ b/approve-service/src/main/resources/templates/approve-service-detail.html
@@ -66,25 +66,33 @@
 					required readonly>
 			</div>
 		</div>
-		<div class="row" style="padding-top: 30px;">
+		<div class="row" style="padding-top: 30px;"th:switch="${orderVO.status}">
 			<div class="col-md-6"></div>
-			<div class="col-md-6">
-				<form method="POST">
+			<div class="col-md-6" th:case="0">
+				<form method="POST" >
 					<input type="hidden" id="orderNo" name="orderNo"
-						th:value="${orderVO.orderNo}">
+						th:value="${orderVO.orderNo}" >
 						
 					<button type="button" class="btn-style06 md"
-						style="margin-left: 15%;" onclick="approval()">승인</button>
+						style="margin-left: 15%;" onclick="approval()" >승인</button>
 					<button type="button" class="btn-style07 md" style="float: right;"
-						onclick="reject()">반려</button>
+						onclick="reject()" >반려</button>
 				</form>
+				
 			</div>
-
+			<div class="col-md-6" th:case="*">
+				<button type="button" class="btn-style07 md" style="float: right;" onclick="back()">뒤로가기</button>
+			</div>
 		</div>
 	</div>
 </div>
 <html th:replace="footer::footerFragment"></html>
 <script th:inline="javascript">
+
+	function back() {
+		location.replace("http://localhost:8000/manage/list");
+	}
+	
 	function approval() {
 		if (confirm("승인하시겠습니까?")) {
 			var orderNo = $('#orderNo').val();
