[권희수] 04-11 14:19 pull 받기전 용

--- a/confirm-service/src/main/resources/templates/confirm-service-list.html
+++ b/confirm-service/src/main/resources/templates/confirm-service-list.html
@@ -25,7 +25,8 @@
 					<div class="row">
 						<!-- Grid column -->
 						<div class="col-md-12">
-							<h2 class="pt-3 pb-4 text-center font-bold font-up deep-purple-text" style="font-weight: 800;color: #3a3a3a;">내
+							<h2
+								class="pt-3 pb-4 text-center font-bold font-up deep-purple-text">내
 								주문내역</h2><hr>
 							<!-- <div class="input-group md-form form-sm form-2 pl-0">
                                     <input class="form-control my-0 py-1 pl-3 purple-border" type="text"
