--- a/order-service/src/main/resources/templates/Fragment/order.html
+++ b/order-service/src/main/resources/templates/Fragment/order.html
@@ -102,7 +102,7 @@
 											<div class="col-4">
 												<label class="proLimit">대출한도</label> <input type="text"
 													name="proLimit" class="proLimit"
-													th:value="${#numbers.formatInteger(productList.proLimit,3,'COMMA')}+'만원'"
+													th:value="${#numbers.formatInteger(productList.proLimit,0,'COMMA')} + '만원'"
 													readonly />
 												<p></p>
 											</div>
@@ -142,8 +142,9 @@
 									</div>
 									<input type="button" name="previous"
 										class="previous action-button-previous" value="Previous" /> <input
-										type="button" name="make_payment" class="next action-button"
-										value="Confirm" onclick="javascript:saveOrder(); SendMessage();" />
+										type="button" name="make_payment" class="action-button"
+										value="Confirm"
+										onclick="javascript:saveOrder(); SendMessage();" />
 								</fieldset>
 							</form>
 						</div>
@@ -166,13 +167,16 @@
 		     str = String(str);
 		     return str.replace(/[^\d]+/g, '');
 		 }
+		 function removeComma(str)
+			{
+				n = parseInt(str.replace(/,/g,""));
+				return n;
+			}
 		
 		//대출금액 초과 신청시.
 		$('#orderPrice').focusout(function() {
-			var orderPrice = Number($('input[name=orderPrice]').val());
-			//  orderPrice = Math.floor(orderPrice/1000);
-			var proLimit = parseInt($('input[name=proLimit]').val());
-			
+			var orderPrice = parseInt($('input[name=orderPrice]').val().replace(/,/g,''));
+			var proLimit = parseInt($('input[name=proLimit]').val().replace(/,/g,''));
 
 			if (proLimit < orderPrice) {
 				alert("제한 금액보다 큽니다. 다시 입력해 주세요.");
@@ -262,7 +266,6 @@
 				dataType : "text",
 				contentType : 'application/json',
 				success : function(data) {
-					alert('여기 오냐');
 					location.href = "/confirm/check"
 				},
 				error : function(xhr, status, error) {
