--- a/product-service/src/main/resources/templates/product-service-register.html
+++ b/product-service/src/main/resources/templates/product-service-register.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="col-md-6 mt-md-0 mt-3">
 					<label>대출 한도(만원)</label> <input class="form-control" type="text"
-						id="proLimit" name="proLimit"
+						id="proLimit" name="proLimit" onkeyup="inputNumberFormat(this)"
 						oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
 						required>
 				</div>
@@ -80,6 +80,26 @@
 	</div>
 </div>
 <html th:replace="footer::footerFragment"></html>
+<script>
+function inputNumberFormat(obj) {
+    obj.value = comma(uncomma(obj.value));
+}
+
+function comma(str) {
+    str = String(str);
+    return str.replace(/(\d)(?=(?:\d{3})+(?!\d))/g, '$1,');
+}
+
+function uncomma(str) {
+    str = String(str);
+    return str.replace(/[^\d]+/g, '');
+}
+function removeComma(str)
+	{
+		n = parseInt(str.replace(/,/g,""));
+		return n;
+	}
+</script>
     <script src="js/product.js"></script>
     <script type="text/javascript"
       src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
